@@ -84,6 +84,8 @@ User Interface
 - In LessTif, the Backspace and Delete keys in the debugger console 
   work better.
 
+- Spin boxes (used to step values) have been slightly improved.
+
 - Forwarding of keyboard events from the source window into the
   debugger console is now optional.  See the `consoleHasFocus' resource. (10)
 
